fix(update):Update node module

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "cors-validator": "^3.1.2",
     "dayjs": "^1.11.9",
     "dotenv": "^16.6.1",
     "execp": "^0.0.1",
@@ -40,6 +39,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
+    "lovable-ci": "^3.1.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
