--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.2",
   "scripts": {
-    "dev": "concurrently \"node server/server.js\" \"vite\" ",
+    "dev": "concurrently \"vite\" ",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
