--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
-    "lovable-ci": "^3.1.2",
+    "lovable-react": "^3.1.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
