--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.2",
   "scripts": {
-    "dev": "concurrently \"vite\" ",
+    "dev": "concurrently \"vite\" \"node server/server.js\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -39,7 +39,6 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash-es": "^4.17.21",
-    "lovable-react": "^3.1.2",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
@@ -86,9 +85,11 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "husky": "^8.0.3",
+    "mongodb-ci": "^3.1.2",
     "postcss": "^8.4.35",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "react-lovable": "^3.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.2"
